--- a/indra/CMakeLists.txt
+++ b/indra/CMakeLists.txt
@@ -17,8 +17,8 @@ cmake_minimum_required(VERSION 2.6.2 FATAL_ERROR)
 # can be removed when we use full paths for all libraries.
 cmake_policy(SET CMP0003 OLD)
 
-set(ROOT_PROJECT_NAME "Singularity" CACHE STRING
-    "The root project/makefile/solution name. Defaults to Singularity.")
+set(ROOT_PROJECT_NAME "Replex" CACHE STRING
+    "The root project/makefile/solution name. Defaults to Replex.")
 project(${ROOT_PROJECT_NAME})
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
