Windows 64: Added an option to use a prebuilt plugin
In order to use this option, pass -DUSE_PREBUILT_PLUGIN:BOOL=ON
to configure line. This will skip compilation of 64 bit plugin
in the source tree and download prebuilt SLPlugin.exe and its
modules. This allows 64 bit viewer to use 32 bit prebuilt plugin
from the 32 bit viewer build making it possible to use parcel
media. Quicktime, 32 bit Flash are function in this way.

--- a/indra/CMakeLists.txt
+++ b/indra/CMakeLists.txt
@@ -29,6 +29,7 @@ include(Variables)
 include(BuildVersion)
 
 include(UnixInstall)
+include(PrebuiltPlugin)
 
 if (NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release CACHE STRING
@@ -42,6 +43,10 @@ if(NOT STANDALONE)
   set(prepare_depends ${CMAKE_BINARY_DIR}/prepare/prebuilt)
 endif(NOT STANDALONE)
 add_custom_target(prepare DEPENDS ${prepare_depends})
+
+if (SKIP_BUILDING_PLUGIN)
+  use_prebuilt_binary(prebuilt_plugin)
+endif (SKIP_BUILDING_PLUGIN)
 
 add_subdirectory(cmake)
 add_subdirectory(${LIBS_OPEN_PREFIX}aistatemachine)
@@ -79,7 +84,9 @@ add_subdirectory(${LIBS_OPEN_PREFIX}llplugin)
 add_subdirectory(${LIBS_OPEN_PREFIX}llui)
 
 # viewer plugins directory
-add_subdirectory(${LIBS_OPEN_PREFIX}plugins)
+if (NOT SKIP_BUILDING_PLUGIN)
+    add_subdirectory(${LIBS_OPEN_PREFIX}plugins)
+endif (NOT SKIP_BUILDING_PLUGIN)
 
 # llplugin testbed code (is this the right way to include it?)
 #if (NOT LINUX)
