--- a/indra/newview/English.lproj/InfoPlist.strings.in
+++ b/indra/newview/English.lproj/InfoPlist.strings.in
@@ -3,4 +3,4 @@
 CFBundleName = "${VIEWER_CHANNEL_ONE_WORD}";
 
 CFBundleShortVersionString = "${VIEWER_CHANNEL} Viewer ${vMAJOR}.${vMINOR}.${vPATCH}.${vBUILD}";
-CFBundleGetInfoString = "${VIEWER_CHANNEL} Viewer ${vMAJOR}.${vMINOR}.${vPATCH}.${vBUILD}, Copyright 2012 Siana Gearz";
+CFBundleGetInfoString = "${VIEWER_CHANNEL} Viewer ${vMAJOR}.${vMINOR}.${vPATCH}.${vBUILD}, Copyright 2001-2014, Linden Research, Inc., Opensource Contributors";
